--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=buildsphere-platform
+
+# Spring DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/learning-center-os?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
+
+#Spring Data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=com.construtech.buildsphere.platform.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+
+
