--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=buildsphere-platform
+spring.application.name=Buildsphere-platform
 
 # Spring DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/learning-center-os?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/buildsphere-platform?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=Piero123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring Data JPA Configuration
