feat(iam): added role and user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=buildsphere-platform
+
+documentation.application.description = @project.description@
+documentation.application.version = @project.version@
+
+# JWT Configuration properties
+authorization.jwt.secret=WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days=7
