--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=buildsphere-platform
+
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/construtech?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=********
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
+
+#Spring Data JPA Hibernate Configuration
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=com.construtech.buildsphere.platform.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
