--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Buildsphere-platform
 
+server.port=8080
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/buildsphereplatform?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
