--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
-spring.application.name=buildsphere-platform
+spring.application.name=Buildsphere-platform
 
-# Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/construtech?useSSL=false&serverTimezone=UTC
+# Spring DataSource Configuration
+spring.datasource.url=jdbc:mysql://root:pdiatoWvVQvTaNmYXWkellenpbQDOIib@junction.proxy.rlwy.net:19727/railway
 spring.datasource.username=root
-spring.datasource.password=********
+spring.datasource.password=pdiatoWvVQvTaNmYXWkellenpbQDOIib
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-# Configuración de JPA
-spring.jpa.hibernate.ddl-auto=update
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
 
 #Spring Data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=com.construtech.buildsphere.platform.shared.infrastructure.persistence.jpa.configuration.strategy.SnakeCaseWithPluralizedTablePhysicalNamingStrategy
+
+# JWT Configuration Properties
+authorization.jwt.secret=WriteHereYourSecretStringFroTokenSigningCredentials
+authorization.jwt.expiration.days=7
